prevent post nav date from getting cut off

--- a/app/styles/components/post-nav/_post.scss
+++ b/app/styles/components/post-nav/_post.scss
@@ -52,6 +52,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    padding-top: 1px;
   }
 
   .post-nav-resize-toggle {
